--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,5 @@ pydantic==2.5.2
 pydantic-settings==2.1.0
 aiofiles==23.2.1
 python-jose[cryptography]==3.3.0
-jinja2==3.1.3 
+jinja2==3.1.3
+fast-captcha==0.3.2 
