--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
 fastapi==0.109.2
-uvicorn==0.27.1
+starlette==0.36.3
+jinja2==3.1.3
+aiofiles==23.2.1
 python-multipart==0.0.9
-python-dotenv==1.0.0
+fast-captcha==0.3.2
 pydantic==2.5.2
 pydantic-settings==2.1.0
-aiofiles==23.2.1
-python-jose[cryptography]==3.3.0
-jinja2==3.1.3
-fast-captcha==0.3.2 
+python-dotenv==1.0.0 
