--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,5 @@
-fastapi==0.103.2
-starlette==0.27.0
-jinja2==3.1.3
-aiofiles==23.2.1
-python-multipart==0.0.9
-fast-captcha==0.3.2
-pydantic==1.10.13
-pydantic-settings==0.2.5
-python-dotenv==1.0.0 
+Flask==2.3.3
+flask-cors==4.0.0
+Jinja2==3.1.3
+python-dotenv==1.0.0
+fast-captcha==0.3.2 
